페이스북 로그인 기능 추가

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">brandprofilingApp</string>
+    <string name="app_name">브랜드프로파일링</string>
+    <string name="facebook_app_id">1756148374679717</string>
+    <string name="fb_login_protocol_scheme">fb1756148374679717</string>
 </resources>
